<resources>
    <string name="app_name">Modern Fitness</string>
    <string name="email_text">email</string>
    <string name="pass_text">Password</string>
    <string name="login_text">Register Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_header">Login to Modern Fitness</string>
    <string name="logout_button_text">Logout</string>
    <string name="welcome_header_text">Welcome!</string>
    <string name="new_workout_button">New Workout</string>
    <string name="review_workout_button">Review Workouts</string>
    <string name="back_to_workout_button_text">Edit Workout</string>

</resources>
